--- a/html_css/index.html
+++ b/html_css/index.html
@@ -4,7 +4,24 @@
             HTML and CSS
         </title>
     </head>
-    <body>
-        hello..........
+    <body style="background:#6a89cc;">
+        <h1 style="color:aquamarine;">hello..........</h1>
+        <h2 style="color:tomato;">hello..........</h2>
+        <h3>hello..........</h3>
+        <h4>hello..........</h4>
+        <h5>hello..........</h5>
+        <h6>hello..........</h6>
+        <p style="background:rgb(233, 100, 4);color:seagreen;">This is my first paragraph</p>
+        <a href="login.html">Click Me</a>
+            <img height="150" width="100" src="ronaldo_mobile_top.jpg" />
     </body>
 </html>
+
+
+
+
+
+
+
+
+
