--- a/html_css/bootstrap.html
+++ b/html_css/bootstrap.html
@@ -56,7 +56,7 @@
                                             <div class="col-sm-6">
                                                 <input id="age" class="form-control" type="number">
                                             </div>
-                                        </div>
+                                    </div>
                                     <br>
 
                                     <div class="row">
@@ -80,7 +80,16 @@
                                             </select>
                                         </div>
                                     </div>
-
+                                    <br>
+                                    <div class="row">
+                                            <div class="col-sm-6">
+                                                Mobile
+                                            </div>
+                                            <div class="col-sm-6">
+                                                <input id="age" class="form-control" type="text" pattern="[6789]{1}[0-9]{9}">
+                                            </div>
+                                    </div>
+                                    <br>
                                     <div class="row">
                                         <div class="col-sm-6">
                             
