--- a/html_css/bootstrap_calc.html
+++ b/html_css/bootstrap_calc.html
@@ -81,9 +81,17 @@
 
             </div>
             <div class="col-sm-4">
-                <button class="btn btn-success" onclick="calc()">
+                <button type="button" class="btn btn-success" onclick="calc()">
                     SUBMIT
                 </button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6">
+                Answer
+            </div>
+            <div class="col-sm-6">
+                <p id="result"></p>
             </div>
         </div>
     </form>
