--- a/html_css/largest.html
+++ b/html_css/largest.html
@@ -47,18 +47,26 @@
 
         </div>
         <div class="col-sm-3">
-            <button class="btn btn-info" onclick="Largest()">
+            <button type="button" class="btn btn-info" onclick="Largest()">
                     FIND LARGEST
             </button>
         </div>
         <div class="col-sm-3">
-                <button class="btn btn-info" onclick="Smallest()">
+                <button type="button" class="btn btn-info" onclick="Smallest()">
                         FIND SMALLEST
                 </button>
         </div>
         <div class="col-sm-3">
 
         </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-sm-6">
+            Answer
+        </div>
+        <div class="col-sm-6">
+           <p id="result">  </p>
     </div>
 </form>
 </div>
