--- a/Home work/form.html
+++ b/Home work/form.html
@@ -5,107 +5,158 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">   
+    <script src="js/script.js"></script>
 </head>
 <body>
-    <table>
-        <tr>
-            <td>
-                Name
-            </td>
-            <td>
-                <input type="text"/>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Address
-            </td>
-            <td>
-                <textarea rows="4" cols="50">
+    <div class="container">
+        <br>
+        <div class="jumbotron shadow border border-light">
+            <div class="row">
+                <div class="col-sm-4">
 
-                </textarea>
-            </td>
-        </tr>
-        <tr>
-            <td>
-               Gender
-            </td>
-            <td>
-                <input type="radio"  name="gender" value="male">Male
-                <input type="radio"  name="gender" value="female">Female
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Age
-            </td>
-            <td>
-                <input type="number"/>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                DOB
-            </td>
-            <td>
-                <input type="date"/>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Email id
-            </td>
-            <td>
-                <input type="text"/>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                District
-            </td>
-            <td>
-                <select>
-                    <option value="1">Trivandrum</option>
-                    <option value="2">Kollam</option>
-                    <option value="3">Pathanamthitta</option>
-                    <option value="4">Kottayam</option>
-                    <option value="5">Alapuzha</option>
-                    <option value="6">Ernakulam</option>
-                    <option value="7">Thrissur</option>
-                    <option value="8">Malapuram</option>
-                    <option value="9">Palakkad</option>
-                    <option value="10">Kozhikode</option>
-                    <option value="11">Wayanad</option>
-                    <option value="12">Kannur</option>
-                    <option value="13">Kasargod</option>
-                    <option value="14">Idukki</option>
-                </select>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Username
-            </td>
-            <td>
-                <input type="text"/>
-            </td>
-        </tr>
-        <tr>
-            <td>
-               Password
-            </td>
-            <td>
-                <input type="password"/>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Confirm Password
-            </td>
-            <td>
-                <input type="password"/>
-            </td>
-        </tr>
-    </table>
+                </div>
+                <div class="col-sm-4">
+                    <h2 class="text-danger">TEST REGISTER PAGE</h2> 
+                </div>
+                <div class="col-sm-4">
+                    
+                </div>
+            </div>
+          
+        </div>
+        <br>
+    <div class="row">
+        <div class="col-sm-2">
+
+        </div>
+        <div class="col-sm-8">
+                <table>
+                        <tr>
+                            <td>
+                                Name
+                            </td>
+                            <td>
+                                <input id="name" class="form-control" type="text"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Address
+                            </td>
+                            <td>
+                                <textarea id="address"  class="form-control" rows="4" cols="50"></textarea>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                               Gender
+                            </td>
+                            <td>
+                                <input  type="radio"  id="r1" name="gender" value="male" checked>Male
+                                <input  type="radio"  id="r2" name="gender" value="female">Female
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Age
+                            </td>
+                            <td>
+                                <input id="age" class="form-control" type="number"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                DOB
+                            </td>
+                            <td>
+                                <input id="dob" class="form-control" type="date"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Email id
+                            </td>
+                            <td>
+                                <input id="email" class="form-control" type="text"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                District
+                            </td>
+                            <td>
+                                <select id="district" class="form-control">
+                                    <option value="1">Trivandrum</option>
+                                    <option value="2">Kollam</option>
+                                    <option value="3">Pathanamthitta</option>
+                                    <option value="4">Kottayam</option>
+                                    <option value="5">Alapuzha</option>
+                                    <option value="6">Ernakulam</option>
+                                    <option value="7">Thrissur</option>
+                                    <option value="8">Malapuram</option>
+                                    <option value="9">Palakkad</option>
+                                    <option value="10">Kozhikode</option>
+                                    <option value="11">Wayanad</option>
+                                    <option value="12">Kannur</option>
+                                    <option value="13">Kasargod</option>
+                                    <option value="14">Idukki</option>
+                                </select>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Username
+                            </td>
+                            <td>
+                                <input id="user" class="form-control" type="text"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                               Password
+                            </td>
+                            <td>
+                                <input id="pass" class="form-control" type="password"/>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Confirm Password
+                            </td>
+                            <td>
+                                <input class="form-control "type="password"/>
+                            </td>
+                        </tr>
+                        <tr>
+                        <td>
+                            <br>
+                        </td>
+                        <td>
+
+                        </td>
+                        </tr>
+                        <tr>
+                                <td>
+                                </td>
+                                <td>
+                                    <button class="btn btn-primary text-white" onclick="register()">REGISTER</button>
+                                </td>
+                            </tr>
+                    </table>
+        </div>
+        <div class="col-sm-2">
+
+        </div>
+    </div>
+</div>
+<br>
+<footer>
+        <div class=" jumbotron"></div>
+</footer>
 </body>
 </html>
